# email-mcp-gent

./: .env.example  .gitignore  README.md  pyproject.toml
client/: agent.py  mcp_client.py  streamlit_app.py
client/llm/: base.py  deepseek_llm.py  gemini_llm.py  ollama_llm.py
mcp_server/: config.py  gmail_auth.py  server.py
mcp_server/prompts/: email_prompts.py
mcp_server/resources/: email_profile.py  setup_manual.py
mcp_server/tools/: list_emails.py  send_email.py
